# pydelegate-python

./: .pkgit.json  .travis.yml  Pipfile  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: main.yml
pydelegate/: __init__.py
tests/: test_delegate.py  test_pydelegate.py
