[tool.poetry]
name = "pydelegate"
version = "0.1.0"
description = "a python version delegate like C#"
authors = ["Cologler <skyoflw@gmail.com>"]
license = "MIT"
homepage = "https://github.com/Cologler/pydelegate-python"
keywords = ["delegate", "hook"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
